<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#99A8B8"
        android:gravity="center"
        android:text="@string/header_main_activity"
        android:textColor="#000000"
        android:textSize="40dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    android:background="#FFAABBCC"
                    android:gravity="center"
                    android:text="@string/header_banner_ads"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    android:background="#FFFFFFFF"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="showBannerXML"
                    android:text="@string/label_banner_xml_300x50"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    android:background="#FFFFFFFF"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="showBanner"
                    android:tag="banner_300x50"
                    android:text="@string/label_banner_300x50"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    android:background="#FFFFFFFF"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="showBanner"
                    android:tag="banner_300x250"
                    android:text="@string/label_banner_300x250"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    android:background="#FFFFFFFF"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="showBanner"
                    android:tag="banner_468x60"
                    android:text="@string/label_banner_468x60"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    android:background="#FFFFFFFF"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="showBanner"
                    android:tag="banner_728x90"
                    android:text="@string/label_banner_728x90"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFAABBCC"
                    android:gravity="center"
                    android:text="@string/header_interstitial_ads"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFFFF"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="showInterstitial"
                    android:text="@string/label_interstitial"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    android:background="#FFAABBCC"
                    android:gravity="center"
                    android:text="@string/header_native_ads"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    android:background="#FFFFFFFF"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="showNative"
                    android:tag="1"
                    android:text="@string/label_native_image_feed"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    android:background="#FFFFFFFF"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="showNative"
                    android:tag="2"
                    android:text="@string/label_native_news_feed"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    android:background="#FFFFFFFF"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="showNative"
                    android:tag="3"
                    android:text="@string/label_native_board_feed"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    android:background="#FFFFFFFF"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="showNative"
                    android:tag="4"
                    android:text="@string/label_native_flow"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#FF000000" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
